# mcp-feedback-collector

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
src/mcp_feedback_collector/: __init__.py  server.py
src/mcp_feedback_collector/config/: __init__.py  settings.py
src/mcp_feedback_collector/core/: __init__.py  feedback.py  image_handler.py
src/mcp_feedback_collector/ui/: __init__.py  components.py  dialogs.py  theme.py
src/mcp_feedback_collector/utils/: __init__.py  helpers.py  logger.py
